--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,8 +1,5 @@
 name : 🇺🇸 English
 
-# -*- coding: utf-8 -*-
-
-
 general_1 : "𝖱𝖾𝗉𝗅𝗒 𝖳𝗈 𝖠 𝖴𝗌𝖾𝗋'𝗌 𝖬𝖾𝗌𝗌𝖺𝗀𝖾 𝖮𝗋 𝖦𝗂𝗏𝖾 𝖴𝗌𝖾𝗋𝗇𝖺𝗆𝖾 / 𝖴𝗌𝖾𝗋 𝖨𝖣 ."
 general_2 : "𝖲𝗈𝗆𝖾 **𝖤𝗑𝖼𝖾𝗉𝗍𝗂𝗈𝗇 𝖮𝖼𝖼𝗎𝗋𝖾𝖽** 𝖶𝗁𝗂𝗅𝖾 𝖯𝗋𝗈𝖼𝖾𝗌𝗌𝗂𝗇𝗀 𝖸𝗈𝗎𝗋 𝖰𝗎𝖾𝗋𝗒 .\n\n𝖤𝗑𝖼𝖾𝗉𝗍𝗂𝗈𝗇 𝖳𝗒𝗉𝖾 : {0}</code>"
 general_3 : "𝖸𝗈𝗎'𝗋𝖾 𝖠𝗇 𝖠𝗇𝗈𝗇𝗒𝗆𝗈𝗎𝗌 𝖠𝖽𝗆𝗂𝗇 𝖨𝗇 𝖳𝗁𝗂𝗌 𝖢𝗁𝖺𝗍 𝖦𝗋𝗈𝗎𝗉 ! \n𝖱𝖾𝗏𝖾𝗋𝗍 𝖡𝖺𝖼𝗄 𝖳𝗈 𝖴𝗌𝖾𝗋 𝖠𝖼𝖼𝗈𝗎𝗇𝗍 𝖥𝗋𝗈𝗆 𝖠𝖽𝗆𝗂𝗇 𝖱𝗂𝗀𝗁𝗍𝗌."
@@ -167,14 +164,16 @@ ping_2 : "🏓 ᴩᴏɴɢ : <code>{0}ᴍs</code>\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛ
 queue_1 : "» ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "» ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>» ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}</b>\n✨ <b>Tɪᴛʟᴇ :</b> {1}\n⏱ <b>Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n🥀 <b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href=tg://user?id={3}>ᴜsᴇʀ</a>"
+# -*- coding: utf-8 -*-
+queue_4 : "➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}</b>\n✨ <b>Tɪᴛʟᴇ :</b> {1}\n⏱ <b>Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n🥀 <b>Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href='tg://user?id={3}'>ᴜsᴇʀ</a>\n⚡ <b>ʙʏ ➛ <a href='https://t.me/Nezuko_chan_0'>ᴛᴇᴀᴍ-ғᴀ</a></b>"
 queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n❄ <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n<b>✨ Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>⏱ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href=tg://user?id={3}>ᴜsᴇʀ</a>"
-stream_2 : "➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n<b>✨ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href=tg://user?id={0}>ᴜsᴇʀ</a>"
+# -*- coding: utf-8 -*-
+stream_1 : "➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n<b>✨ Tɪᴛʟᴇ :</b> <a href='{0}'>{1}</a>\n<b>⏱ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href='tg://user?id={3}'>ᴜsᴇʀ</a>\n⚡ <b>ʙʏ ➛ <a href='https://t.me/Nezuko_chan_0'>ᴛᴇᴀᴍ-ғᴀ</a></b>"
+stream_2 : "➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n<b>✨ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> <a href='tg://user?id={0}'>ᴜsᴇʀ</a>\n⚡ <b>ʙʏ ➛ <a href='https://t.me/Nezuko_chan_0'>ᴛᴇᴀᴍ-ғᴀ</a></b>"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "⬅️  ʙᴀᴄᴋ"
@@ -307,6 +306,7 @@ gban_9 : "» 𝖫𝗂𝖿𝗍𝖾𝖽 𝖦𝗅𝗈𝖻𝖺𝗅 𝖡𝖺𝗇 𝖥
 gban_10 : "» 𝖭𝗈 𝖮𝗇𝖾 𝖨 𝖦𝗅𝗈𝖻𝖺𝗅𝗅𝗒 𝖡𝖺𝗇𝗇𝖾𝖽 𝖥𝗋𝗈𝗆  𝖳𝗁𝖾 𝖡𝗈𝗍 ."
 gban_11 : "» 𝖥𝖾𝗍𝖼𝗁𝗂𝗇𝗀 𝖦𝖻𝖺𝗇𝗇𝖾𝖽 𝖴𝗌𝖾𝗋𝗌 𝖫𝗂𝗌𝗍 ..."
 gban_12 : "🙂 <b>𝖦𝗅𝗈𝖻𝖺𝗅𝗅𝗒 𝖡𝖺𝗇𝗇𝖾𝖽 𝖴𝗌𝖾𝗋𝗌 :</b>\n\n"
+
 
 
 
