--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -164,14 +164,14 @@ ping_2 : "🏓 ᴩᴏɴɢ : <code>{0}ᴍs</code>\n\n<b><u>{1} sʏsᴛᴇᴍ sᴛ
 queue_1 : "» ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "» ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>» ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "<blockquote>➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}</b></blockquote><blockquote><b>✨ Tɪᴛʟᴇ :</b> {1}</blockquote><blockquote><b>⏱ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs</blockquote><blockquote><b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}</blockquote><blockquote>⚡ <b>ᴘᴏᴡᴇʀ ʙʏ ➛ @Team_Fallen_Angels</b></blockquote>"
+queue_4 : "<b><blockquote>⏤͟͞● ᴀᴅᴅєᴅ ᴛᴏ ǫᴜєᴜє ᴀᴛ #{0}</blockquote>\n<blockquote>❍ ᴛɪᴛʟє :</b> {1}\n<b>❍ ᴅᴜʀᴧᴛɪση :</b> {2} ϻɪηᴜᴛєѕ\n<b>❍ ʙʏ :</b> {3}</blockquote>\n<blockquote><b>❍ ᴊᴏɪη  ➛  @Team_Fallen_Angels</b></blockquote>"
 queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n❄ <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "<blockquote>➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b></blockquote><blockquote><b>✨ Tɪᴛʟᴇ :</b> <a href={0}>{1}</a></blockquote><blockquote><b>⏱ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs</blockquote><blockquote><b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}</blockquote><blockquote>⚡ <b>ᴘᴏᴡᴇʀ ʙʏ ➛ <a href=https://t.me/Team_Fallen_Angels>ᴛᴇᴀᴍ-ғᴀ</a></b></blockquote>"
-stream_2 : "<blockquote>➻ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b></blockquote><blockquote><b>✨ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]</blockquote><blockquote><b>🥀 Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}</blockquote><blockquote>⚡ <b>ᴘᴏᴡᴇʀ ʙʏ ➛ <a href=https://t.me/Team_Fallen_Angels>ᴛᴇᴀᴍ-ғᴀ</a></b></blockquote>"
+stream_1 : "<b>✦  𝐏ʟᴧʏєᴅ ᴧ sσηɢ  ⏤͟͞●</b>\n\n<b>❍ тɪᴛʟє :</b> <a href={0}>{1}</a>\n<b>❍ ᴅᴜʀᴧᴛɪση :</b> {2} ϻɪηᴜᴛєs\n<b>❍ ʙʏ :</b> {3}\n\n<b>⚡ ᴘσᴡєʀ ʙʏ ➛ <a href=https://t.me/Team_Fallen_Angels>ᴛᴇᴀᴍ-ғᴀ</a></b>"
+stream_2 : "<b>✦  𝐏ʟᴧʏєᴅ ᴧ sσηɢ  ⏤͟͞●</b>\n\n<b>❍ 𝛅ᴛʀєᴧϻ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>❍ ᴘʟᴧʏ ʙʏ :</b> {0}\n\n<b>⚡ ᴘσᴡєʀ ʙʏ ➛ <a href=https://t.me/Team_Fallen_Angels>ᴛᴇᴀᴍ-ғᴀ</a></b>"
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
 BACK_BUTTON : "⬅️  ʙᴀᴄᴋ"
@@ -304,6 +304,7 @@ gban_9 : "» 𝖫𝗂𝖿𝗍𝖾𝖽 𝖦𝗅𝗈𝖻𝖺𝗅 𝖡𝖺𝗇 𝖥
 gban_10 : "» 𝖭𝗈 𝖮𝗇𝖾 𝖨 𝖦𝗅𝗈𝖻𝖺𝗅𝗅𝗒 𝖡𝖺𝗇𝗇𝖾𝖽 𝖥𝗋𝗈𝗆  𝖳𝗁𝖾 𝖡𝗈𝗍 ."
 gban_11 : "» 𝖥𝖾𝗍𝖼𝗁𝗂𝗇𝗀 𝖦𝖻𝖺𝗇𝗇𝖾𝖽 𝖴𝗌𝖾𝗋𝗌 𝖫𝗂𝗌𝗍 ..."
 gban_12 : "🙂 <b>𝖦𝗅𝗈𝖻𝖺𝗅𝗅𝗒 𝖡𝖺𝗇𝗇𝖾𝖽 𝖴𝗌𝖾𝗋𝗌 :</b>\n\n"
+
 
 
 
